Remove use of Apache http-client
Java 11 comes with a built-in http client, use that instead of brewing
our own. Eliminates some amount of direction and uneeded dependencies.

Change-Id: Ifd972bb1f1db401d3f7b57f826127a41eb378c6d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>